--- a/src/app/add-chart/add-chart.component.html
+++ b/src/app/add-chart/add-chart.component.html
@@ -5,8 +5,8 @@
       <div>
         <label>Chart type:&nbsp;&nbsp;</label>
         <mat-radio-group>
-          <mat-radio-button value="ChartTypes.Bar" [checked]="true" (change)="onTypeSelectionChange(ChartTypes.Bar)">Bar Chart</mat-radio-button>
-          <mat-radio-button value="ChartTypes.Line" (change)="onTypeSelectionChange(ChartTypes.Line)">Line Chart</mat-radio-button>
+          <mat-radio-button value="ChartTypes.Bar" [checked]="currentChartDefinition.type === ChartTypes.Bar" (change)="onTypeSelectionChange(ChartTypes.Bar)">Bar Chart</mat-radio-button>
+          <mat-radio-button value="ChartTypes.Line" [checked]="currentChartDefinition.type === ChartTypes.Line" (change)="onTypeSelectionChange(ChartTypes.Line)">Line Chart</mat-radio-button>
         </mat-radio-group>
       </div>
       <mat-form-field>
@@ -26,10 +26,10 @@
         <div class="card-header">
           Selected sensors
         </div>
-        <div class="card-block">
+        <div class="card-block rounded">
           <br/>
           <mat-chip-list selectable="false" placeholder="Selected sensors">
-            <mat-chip *ngFor="let sensor of chartDefToAdd.sensors;" (remove)="removeChip(sensor)" [style.color]="getChipTextColor(sensor)"
+            <mat-chip *ngFor="let sensor of currentChartDefinition.sensors;" (remove)="removeChip(sensor)" [style.color]="getChipTextColor(sensor)"
               [style.background]="getChipColor(sensor)" selected="false">
               {{ sensor?.name }}
               <mat-icon matChipRemove>cancel</mat-icon>
@@ -42,7 +42,7 @@
     </div>
   </mat-card-content>
   <mat-card-actions align="end">
-    <button (click)="chartDefined()" mat-raised-button mat-dialog-close color="primary" [disabled]="!isSensorPresent()">Add</button>
+    <button (click)="chartDefined()" mat-raised-button mat-dialog-close color="primary" [disabled]="!isSensorPresent()">Save</button>
     <button mat-raised-button mat-dialog-close>Cancel</button>
   </mat-card-actions>
 </mat-card>
